<?xml version="1.0"?>
<package format="3">
  <name>rml_63_ee_description</name>
  <version>0.0.1</version>
  <description>Combined URDF for RealMan RM-L63 arm with custom EE (ee_bind_ee_link_description), plus RViz viewer launch.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps for meshes and viewers -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
